--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>In this webpage, we will provide users with a comprehensive tool for managing their finances effectively.</p>
         <p>There will be several features involved including:</p>
     </section>
-    <img id="image" src="fianance.jpeg" width="300" height="200">
+    <img id="image" src="finance.jpeg" width="300" height="200">
     <script>
   
     </script>
