--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Finanace Manager</title>
+    <title>Personal Finance Manager</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,6 +70,7 @@
         <a href="budgeting.html">Budgeting System</a>
         <a href="user.html">User Logging</a>
         <a href="visualizations.html">Data Visualizations</a>
+        <a href="visualizations2.html">Data Visualizations 2</a>
     </nav>
     <section id ="class">
         <h1>Welcome to the Personal Finance Manager</h1>
