--- a/user.html
+++ b/user.html
@@ -60,7 +60,7 @@
 <body>
 
     <nav>
-        <a href="user2.html">Back to homepage</a>
+        <a href="index.html">Back to homepage</a>
     </nav>
 
     <h1>Expense Log</h1>
