--- a/visualizations.html
+++ b/visualizations.html
@@ -1,8 +1,15 @@
-<html">
+<html>
 <head>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <title>Expense Tracker</title>
     <style>
+        body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #f4f4f4;
+                text-align: center;
+        }
         nav {
             background-color: #333;
             overflow: hidden;
