--- a/user.html
+++ b/user.html
@@ -55,6 +55,31 @@
             background-color: #ddd;
             color: blue;
         }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border:1.5px solid black;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50; 
+            color: white; 
+            padding: 10px 20px; 
+            border: 1.5px solid black;; 
+            cursor: pointer; 
+            font-size: 16px; 
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049; 
+        }
     </style>
 </head>
 <body>
