--- a/user.html
+++ b/user.html
@@ -105,7 +105,7 @@
             myArray.push({ description, amount, category, transactionDate });
             console.log(myArray);
             localStorage.setItem("myArray", JSON.stringify(myArray));
-            window.location.href ='test.html';
+            window.location.href= "userans.html";
             document.getElementById('description').value = '';
             document.getElementById('amount').value = '';
             document.getElementById('category').value = '';
