--- a/userans.html
+++ b/userans.html
@@ -27,9 +27,33 @@
         th {
             background-color: #f2f2f2;
         }
+        nav {
+                background-color: #333;
+                overflow: hidden;
+            }
+
+        nav a {
+            float: left;
+            display: block;
+            color: #fff;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            background-color: #ddd;
+            color: blue;
+        }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Back to homepage</a>
+        <a href="user.html">Back to user logging</a>
+        <a href="visualizations.html">Visualization graph</a>
+        <a href="visualizations2.html">Visualization graph 2</a>
+    </nav>
     <h2>Expense Table</h2>
     <table border="1" id="dataTable">
         <thead>
