--- a/educational.html
+++ b/educational.html
@@ -37,6 +37,24 @@
             color: white;
             text-align: center;
             padding: 1em;
+
+            /* Set initial opacity to 0 for the fade-in effect */
+            opacity: 0;
+
+            /* Apply the fade-in animation to the header */
+            animation: fadeIn 1s ease-in-out forwards;
+        }
+
+        /* Define the keyframes for the fade-in animation */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         section {
@@ -45,6 +63,12 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            
+            /* Set initial opacity to 0 for the fade-in effect */
+            opacity: 0;
+            
+            /* Apply the fade-in animation to the sections */
+            animation: fadeIn 1s ease-in-out forwards;
         }
 
         h2 {
