--- a/budgeting.html
+++ b/budgeting.html
@@ -70,7 +70,7 @@
         }
 
         button.clicked {
-            background-color: #FF5733;
+            background-color: lightblue;
             transform: scale(0.9);
         }
     </style>
