--- a/visualizations.html
+++ b/visualizations.html
@@ -4,11 +4,11 @@
     <title>Expense Tracker</title>
     <style>
         body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-                background-color: #f4f4f4;
-                text-align: center;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
         }
         nav {
             background-color: #333;
@@ -33,6 +33,7 @@
 <body>
     <nav>
         <a href="index.html">Back to homepage</a>
+        <a href="user.html">User Logging</a>
     </nav>
 <div id="expense-chart"></div>
 
