--- a/visualizations.html
+++ b/visualizations.html
@@ -78,7 +78,7 @@
         x: categories,
         y: amounts,
         marker: {
-            color: 'rgb(55, 83, 109)',
+            color: "rgb(50,40,30)",
             opacity: 0.7,
         }
     }];
