--- a/user.html
+++ b/user.html
@@ -2,7 +2,6 @@
 <head>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -11,15 +10,15 @@
 
         h1 {
             text-align: center;
-            color: #333;
+            color: rgb(149, 137, 137)aaa;
         }
 
         form {
-            max-width: 400px;
+            max-width: 300px;
             margin: 20px auto;
-            background-color: #fff;
+            background-color: #c7a6a6;
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 6px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -34,7 +33,7 @@
             margin-bottom: 15px;
             box-sizing: border-box;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 3px;
         }
 
         nav {
