--- a/userans.html
+++ b/userans.html
@@ -171,6 +171,7 @@
                 const year = dateObj.getFullYear();
                 const weekNum = getWeekNum(dateObj);
                 const weekKey = `${year}-W${weekNum< 10 ? '0' : ''}${weekNum}`;
+                console.log(weekKey);
                 bool=true;
                 for (let i = 0; i < group.length; i++) {
                     if(weekKey==group[i]){
@@ -188,13 +189,13 @@
         
         function getWeekNum(date) {
             const target = new Date(date.valueOf());
-            const dayNumber = (date.getDay() + 6) % 7;
+            const dayNumber = (date.getDay() + 8) % 7;
             target.setDate(target.getDate() - dayNumber + 3);
             
             const firstThursday = target.valueOf();
             target.setMonth(0, 1);
-            if (target.getDay() !== 4) {
-                target.setMonth(0, 1 + ((4 - target.getDay()) + 7) % 7);
+            if (target.getDay() !== 0) {
+                target.setMonth(0, 1 + ((0 - target.getDay()) + 7) % 7);
             }
             console.log(target);
             return 1 + Math.ceil((firstThursday - target) / 604800000);
