--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
             bottom: 0;
             width: 100%;
         }
-        .image{
+        #image{
             display: block;
             margin: 20px auto;
             border-radius: 8px;
             display:flex;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             align-items:center;
-            justify-content:center
+            justify-content:center;
+            width:400px;
         }
         #class {
             max-width: 800px;
