--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: black;
             overflow: hidden;
         }
 
@@ -76,11 +76,13 @@
     <section id ="class">
         <h1>Welcome to the Personal Finance Manager</h1>
         <p>In this webpage, we will provide users with a comprehensive tool for managing their finances effectively.</p>
-        <p>There will be several features involved including:</p>
-        <p>User Expense Logging and catagorizing transactons</p>
-        <p>Budgeting system for users to set weekly/monthly budgets</p>
-        <p>An educational page with basic financial principles and tips.</p>
-        <p>Data Visualizations tracking user logged expense</p>
+        <p>There are several features including:</p>
+        <ul>
+            <li>User Expense Logging and categorizing transactions.</li>
+            <li>Budgeting system for users to set weekly/monthly budgets.</li>
+            <li>An educational page with basic financial principles and tips.</li>
+            <li>Data Visualizations tracking user logged expenses.</li>
+        </ul>
     </section>
     <img id="image" src="finance.jpeg" width="300" height="200">
     <script>
