--- a/educational.html
+++ b/educational.html
@@ -14,7 +14,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: black;
             overflow: hidden;
         }
 
