--- a/user.html
+++ b/user.html
@@ -23,7 +23,7 @@
             margin: 20px auto;
             background-color: #c5a8a8;
             padding: 20px;
-            border:2px solid black;
+            border: 2px solid black;
         }
 
         label {
@@ -32,7 +32,7 @@
 
         input,
         select {
-            width: 100%;
+            width: 98%;
             padding: 10px;
             margin-bottom: 15px;
             box-sizing: border-box;
@@ -91,7 +91,6 @@
         input[type="submit"]:hover {
             background-color: #45a049; 
         }
-
     </style>
 </head>
 <body>
@@ -101,7 +100,7 @@
 
     <h1>Expense Log</h1>
 
-    <form id="expenseForm">
+    <form id="expenseForm" class="expense-form">
         <label for="description">Description:</label>
         <input type="text" id="description" name="description" required>
 
@@ -119,48 +118,70 @@
 
         <label for="birthdate">Select the date of transaction:</label>
         <input type="date" id="birthdate" name="birthdate">
-        <input type="submit" onclick="logExpense()">
+        <input type="submit">
     </form>
 
-    <button type="button" id="myButton">Clear Expenses</button>
+    <button type="button" id="myButton" class="clear-button">Clear Expenses</button>
 
     <script>
-        function logExpense() {
-            var myArray = JSON.parse(localStorage.getItem("myArray")) || [];
-            const description = document.getElementById('description').value;
-            const amount = document.getElementById('amount').value;
-            const category = document.getElementById('category').value;
-            const transactionDate = document.getElementById('birthdate').value;
-
-            if (description === "" || amount === "" || category === "" || transactionDate === "" || amount === "0") {
-                alert('Please enter all fields');
-                return;
+        class ExpenseLogger {
+            constructor() {
+                this.expenseArray = [];
             }
-            myArray.push({ description, amount, category, transactionDate });
-            console.log(myArray);
-            localStorage.setItem("myArray", JSON.stringify(myArray));
-            window.location.href = "userans.html";
-            document.getElementById('description').value = '';
-            document.getElementById('amount').value = '';
-            document.getElementById('category').value = '';
-            document.getElementById('birthdate').value = '';
+
+            logExpense(description, amount, category, transactionDate) {
+                this.expenseArray.push({ description, amount, category, transactionDate });
+                console.log(this.expenseArray);
+                this.updateLocalStorage();
+                this.clearForm();
+                this.redirectToUserPage();
+            }
+
+            clearExpenses() {
+                alert('Expenses have been cleared');
+                this.expenseArray = [];
+                this.updateLocalStorage();
+            }
+
+            updateLocalStorage() {
+                localStorage.setItem("myArray", JSON.stringify(this.expenseArray));
+            }
+
+            clearForm() {
+                document.getElementById('description').value = '';
+                document.getElementById('amount').value = '';
+                document.getElementById('category').value = '';
+                document.getElementById('birthdate').value = '';
+            }
+
+            redirectToUserPage() {
+                window.location.href = "userans.html";
+            }
         }
 
-        document.addEventListener('DOMContentLoaded', function () {
-            var myButton = document.getElementById('myButton');
+        const expenseLogger = new ExpenseLogger();
 
-            myButton.addEventListener('click', function() {
-                alert('Expenses have been cleared');
-                localStorage.setItem("description", 0);
-                localStorage.setItem("amount", 0);
-                localStorage.setItem("category", 0);
-                localStorage.setItem("transactionDate", 0);
-                localStorage.setItem("food", 0);
-                localStorage.setItem("enter", 0);
-                localStorage.setItem("house", 0);
-                localStorage.setItem("trans", 0);
-                localStorage.setItem("util", 0);
-                localStorage.setItem("myArray", JSON.stringify([]));
+        document.addEventListener('DOMContentLoaded', function () {
+            const expenseForm = document.querySelector('.expense-form');
+            const clearButton = document.querySelector('.clear-button');
+
+            expenseForm.addEventListener('submit', function (event) {
+                event.preventDefault();
+                const description = document.getElementById('description').value;
+                const amount = document.getElementById('amount').value;
+                const category = document.getElementById('category').value;
+                const transactionDate = document.getElementById('birthdate').value;
+
+                if (description === "" || amount === "" || category === "" || transactionDate === "" || amount === "0") {
+                    alert('Please enter all fields');
+                    return;
+                }
+
+                expenseLogger.logExpense(description, amount, category, transactionDate);
+            });
+
+            clearButton.addEventListener('click', function () {
+                expenseLogger.clearExpenses();
             });
         });
     </script>
